2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed an annoying bug in the locale selection.
	  Punjabi was twice in our internal list which makes
	  it impossible to access locale after Portuguese in
	  our list. It was possible to access locale by going
	  backward but really annoying.

	* src/gcompris/config.c:

2009-03-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a crash case by Miguel in the configuration.
	  in a languge setting configuration of an activity
	  if we change the language, gcompris crashes.

	* src/gcompris/board_config_combo.c:
	(gc_board_config_combo_locales_asset):

	*** RELEASE 8.4.11 ***

2009-03-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Patch from Miguel that fixes the configuration
	of python activities (tuxpaint and login was crashing).

	* src/boards/Makefile.am:
	* src/boards/py-mod-gcompris.c:
	(py_gc_board_config_window_display),
	(py_gc_board_config_boolean_box), (py_gc_board_config_combo_box),
	(py_gc_board_config_radio_buttons), (py_gc_board_config_spin_int),
	(py_gc_board_conf_separator), (py_gc_board_config_combo_locales),
	(py_gc_board_config_combo_locales_asset),
	(py_gc_board_config_textview):
	* src/boards/python/login.py:
	* src/boards/python/pythontest.py:
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board_config_radio.c:
	(gc_board_config_radio_buttons):

	*** RELEASE 8.4.9 ***

2009-03-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- gnet is now enable by default.

	* configure.in:

2009-03-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Patch from Miguel. On some windows manager, we were crashing
	  when opening a configuration windows while in fullscreen.

	* src/gcompris/board_config.c: (gc_board_config_window_display):

2009-03-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Was not compiling when USE_GNET was not active.

	* src/gcompris/gc_net.c: (gc_net_destroy),
	(gc_net_get_url_from_file), (gc_net_dir_read_name),
	(gc_cache_init), (gc_cache_get_relative), (gc_cache_add),