@@ -1,3 +1,11 @@
+2009-03-15  Bruno Coudoin  <bruno.coudoin@free.fr>
+
+	- Replaced letter that differenciate blocks for
+	  color blinds by ASCII symbols that are locale
+	  agnostic.
+
+	* src/boards/hanoi.c: (hanoi_create_item):
+
 2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Fixed an annoying bug in the locale selection.
